One final alignment fix.

--- a/index.css
+++ b/index.css
@@ -150,6 +150,7 @@ iframe {
         height: 100vh;
         width: 80vw;
         left: 20vw;
+        top: 0px;
         overflow: scroll;
     }
 
